# r2r-ultra-mcp-server

./: .gitignore  CLAUDE.md  README.md  server.py  test_gemini_api.py
.claude/: SEARCH_STRATEGIES.md  settings.json
.claude/agents/: doc-analyst.md  knowledge-explorer.md  research-assistant.md
.claude/commands/: TEMPLATE.md  cc-commands.md  cc-hooks.md  cc-mcp.md  cc-setup.md  cc-subagents.md  cc.md  doc-add.md  doc-search.md  doc-stats.md  doc-validate.md  fastmcp.md  integrate.md  r2r-agent.md  r2r-collections.md  r2r-examples.md  r2r-quick.md  r2r-rag.md  r2r-search.md  r2r-upload.md  r2r-workflows.md  r2r.md
.claude/docs/: INTEGRATION_PLAN.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md
.claude/scripts/: r2r
.github/scripts/: gemini_review.py
.github/workflows/: ci.yml  gemini-review-alternative.yml.disabled  gemini-review.yml
docs/: QUICK_DEPLOY.md  ULTIMATE_COMPARISON.md
docs/claude_code/: 01-overview-and-getting-started.md  02-installation-and-setup.md  03-core-features.md  04-commands-and-usage.md  05-hooks-and-customization.md  (+10 more)
examples/: layer1_openapi.py  layer2_smart.py
mcp-server/: .env.example  .gitignore  API_README.md  Makefile  README.md  api.py  pyproject.toml  server.py  test_mcp_client.py  test_tools.py
mcp-server/docs/: ARCHITECTURE.md  COMPARISON.md  DEPLOYMENT.md  ENHANCED_README.md  FASTMCP_CLOUD_DEPLOY.md  ULTRA_README.md
mcp-server/examples/: layer1_openapi.py  layer2_smart.py
mcp-server/tests/: README.md  __init__.py  conftest.py  test_config.py  test_middleware.py  test_server.py
tests/: __init__.py  test_server.py
(+19 files in other folders)
